--- a/src/app/components/custom-tree-table/custom-tree-table.css
+++ b/src/app/components/custom-tree-table/custom-tree-table.css
@@ -5,7 +5,7 @@
 }
 
 .wrap-text {
-    white-space: normal;
+    white-space: pre-wrap;
     word-break: break-word;
 }
 
